--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "@ant-design/icons": "^5.2.6",
     "antd": "^5.11.1",
     "axios": "^1.6.2",
+    "bootstrap": "^5.3.2",
+    "materialize-css": "^1.0.0-rc.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
+    "react-lazy-load": "^4.0.1",
     "react-router-dom": "^6.18.0"
   },
   "devDependencies": {
